// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Creates IDE Integration files 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
Written jest.config.mjs
",
}
`;

exports[`Creates IDE Integration files 2`] = `
"// AUTOGENERATED BY CRAFTY - DO NOT EDIT
// This file helps IDEs autoconfigure themselves
// any change here will only be used by your IDE, not by Crafty

/* global process */
import { initialize } from "@swissquote/crafty";
import { normalizeJestOptions } from "@swissquote/crafty-preset-jest";

const crafty = await initialize(process.argv);

// Crafty configures its own environment for builds
// tests have different needs
process.env.NODE_ENV = "test";

const config = normalizeJestOptions(crafty, process.argv);
export default config;
"
`;

exports[`Creates IDE Integration files with Babel 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
Written jest.config.mjs
",
}
`;

exports[`Creates IDE Integration files with Babel 2`] = `
"// AUTOGENERATED BY CRAFTY - DO NOT EDIT
// This file helps IDEs autoconfigure themselves
// any change here will only be used by your IDE, not by Crafty

/* global process */
import { initialize } from "@swissquote/crafty";
import { normalizeJestOptions } from "@swissquote/crafty-preset-jest";

const crafty = await initialize(process.argv);

// Crafty configures its own environment for builds
// tests have different needs
process.env.NODE_ENV = "test";

const config = normalizeJestOptions(crafty, process.argv);
export default config;
"
`;

exports[`Fails with babel 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
FAIL src/__tests__/math.js
  ✕ adds two numbers

  ● adds two numbers

    expect(received).toEqual(expected) // deep equality

    Expected: 5
    Received: 4

      3 |
      4 | it("adds two numbers", () => {
    > 5 |     expect(add(2,2)).toEqual(5);
        |                      ^
      6 | })

      ...stacktrace...

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with babel 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
PASS src/__tests__/math.js
  ✓ adds two numbers

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with babel and React 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
PASS src/__tests__/MyComponent.jsx
  <MyComponent />
    ✓ renders three <Foo /> components
    ✓ renders an \`.icon-star\`
    ✓ renders children when passed in
  <Counter />
    ✓ can render and update a counter

Test Suites: 1 passed, 1 total
Tests:       4 passed, 4 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with esm dependency 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
PASS src/__tests__/math.cjs
  ✓ adds two numbers

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with esm dependency and babel 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
PASS src/__tests__/math.js
  ✓ adds two numbers

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with esm module 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
(node:11111) ExperimentalWarning: VM Modules is an experimental feature.
PASS src/__tests__/calculator.mjs
  ✓ adds two numbers
  ✓ advanced math

Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with typescript 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
PASS src/__tests__/math.ts
  ✓ adds two numbers

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with typescript modules 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
(node:11111) ExperimentalWarning: VM Modules is an experimental feature.
PASS src/__tests__/calculator.ts
  ✓ adds two numbers
  ✓ advanced math
  ✓ works with imported cjs libs
  ✓ works with imported mjs libs

Test Suites: 1 passed, 1 total
Tests:       4 passed, 4 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds with typescript modules in esm mode 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
(node:11111) ExperimentalWarning: VM Modules is an experimental feature.
PASS src/__tests__/calculator.mts
  ✓ adds two numbers
  ✓ advanced math
  ✓ works with imported cjs libs
  ✓ works with imported mjs libs
  ✓ works with imports that contain cjs dependencies

Test Suites: 1 passed, 1 total
Tests:       5 passed, 5 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
}
`;

exports[`Succeeds without transpiling, selects test 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
PASS src/__tests__/math-advanced.js
  ✓ adds two big numbers

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites matching __tests__/math-advanced.js.
",
}
`;
